--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="board" id="board">
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="bSquare" id="bSquare" data-bSquare></div>
+    </div>
+    <div>
+        <div class="win-message" id="win-message">
+
+        </div>
+        <button id="restart-button">Restart</button>
+    </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
