Add some styling to body and board-div. Add score area

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <div class="bSquare" id="bSquare" data-bSquare></div>
     </div>
     <div>
+        <div class="score-area">
+            <p>Player 1 Score:</p>
+            <div class="player1"></div>
+            <p>Player 2 Score:</p>
+            <div class="player2"></div>
+        </div>
         <div class="win-message" id="win-message">
 
         </div>
