Add styling to button and align, remove score area

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <div class="board" id="board">
@@ -19,17 +19,11 @@
         <div class="bSquare" id="bSquare" data-bSquare></div>
         <div class="bSquare" id="bSquare" data-bSquare></div>
     </div>
-    <div>
-        <div class="score-area">
-            <p>Player 1 Score:</p>
-            <div class="player1"></div>
-            <p>Player 2 Score:</p>
-            <div class="player2"></div>
-        </div>
+    <div class="info-box">
         <div class="win-message" id="win-message">
 
         </div>
-        <button id="restart-button">Restart</button>
+        <button class="reset-button" id="reset-button">Reset</button>
     </div>
 
     <script src="assets/js/script.js"></script>
