Add player variables and winning combinations

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="board" id="board">
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
-        <div class="bSquare" id="bSquare" data-bSquare></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
+        <div class="cell" id="cell" data-cell></div>
     </div>
     <div class="info-box">
         <div class="win-message" id="win-message">
