Add variables to target certain elements by id

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="cell" id="cell" data-cell></div>
         <div class="cell" id="cell" data-cell></div>
     </div>
-    <div class="info-box">
+    <div class="win-box">
         <div class="win-message" id="win-message">
 
         </div>
